<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.krminc.phr</groupId>
    <version>1.0</version>
    <artifactId>JavaPHRPOC</artifactId>
    <name>HealtheMe</name>
    <url>http://www.krminc.com</url>
    <packaging>war</packaging>

    <description>
        HealtheMe
    </description>

    <inceptionYear>2012</inceptionYear>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    
    <organization>
        <name>KRM Associates, Inc.</name>
        <url>http://www.krminc.com</url>
    </organization>

    <developers>
        <developer>
            <id>dshaw</id>
            <name>Daniel D. Shaw</name>
            <email>mail@dshaw.com</email>
            <organization>KRM Associates, Inc.</organization>
            <url>http://dshaw.com</url>
        </developer>
        <developer>
            <id>cmccall</id>
            <name>Chris McCall</name>
            <email>chris.mccall@krminc.com</email>
            <organization>KRM Associates, Inc.</organization>
            <url>http://www.krminc.com</url>
        </developer>
        <developer>
            <id>chaz</id>
            <name>Charles Brault</name>
            <email>chaz@brault.com</email>
            <organization>KRM Associates, Inc.</organization>
            <url>http://www.krminc.com</url>
        </developer>
        <developer>
            <id>jdoyle</id>
            <name>Jamie Doyle</name>
            <email>Jamie.Doyle@krminc.com</email>
            <url>http://www.krminc.com</url>
        </developer>
        <developer>
            <id>cedwards</id>
            <name>Christopher Edwards</name>
            <email>Christopher.Edwards@krminc.com</email>
            <url>http://www.krminc.com</url>
        </developer>
    </developers>

    <profiles>
        <!-- skip tests by default, but allow override on command line -->
        <profile>
            <id>skiptests</id>
            <activation>
                <property>
                    <name>!maven.test.skip</name>
                </property>
            </activation>
            <properties>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>com.google.collections</groupId>
            <artifactId>google-collections</artifactId>
            <version>1.0-rc4</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-json</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>jsr250-api</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>persistence-api</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>javax.sql</groupId>
            <artifactId>jdbc-stdext</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>javax.transaction</groupId>
            <artifactId>jta</artifactId>
            <version>1.1</version>
        </dependency>
        <!-- TODO: swap out log4j for logback -->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.9</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jdmk</groupId>
                    <artifactId>jmxtools</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jmx</groupId>
                    <artifactId>jmxri</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.mail</groupId>
                    <artifactId>mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>1.6.2</version>
        </dependency>
		<dependency>
		    <groupId>joda-time</groupId>
		    <artifactId>joda-time-jsptags</artifactId>
		    <version>1.1.1</version>
		</dependency>
        <dependency>
            <groupId>opensymphony</groupId>
            <artifactId>sitemesh</artifactId>
            <version>2.4.2</version>
        </dependency>
<!--         <dependency> -->
<!--             <groupId>org.springframework.security</groupId> -->
<!--             <artifactId>spring-security-core</artifactId> -->
<!--             <version>2.0.4</version> -->
<!--         </dependency> -->
        <dependency>
            <groupId>toplink.essentials</groupId>
            <artifactId>toplink-essentials</artifactId>
            <version>2.1-60</version>
        </dependency>
        <dependency>
            <groupId>toplink.essentials</groupId>
            <artifactId>toplink-essentials-agent</artifactId>
            <version>2.0-36</version>
        </dependency>
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>string</artifactId>
            <version>1.1.0</version>
        </dependency>

        <!-- Logging set up -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.5.2</version>
        </dependency>
<!--         <dependency> -->
<!--             <groupId>ch.qos.logback</groupId> -->
<!--             <artifactId>logback-core</artifactId> -->
<!--             <version>0.9.9</version> -->
<!--         </dependency> -->
<!--         <dependency> -->
<!--             <groupId>ch.qos.logback</groupId> -->
<!--             <artifactId>logback-classic</artifactId> -->
<!--             <version>0.9.9</version> -->
<!--         </dependency> -->

        <!-- compile time -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>displaytag</groupId>
            <artifactId>displaytag</artifactId>
            <version>1.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.1.2</version>
            <scope>compile</scope>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>javax.ejb</groupId>
            <artifactId>ejb-api</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>openejb-core</artifactId>
            <version>3.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <projectname>HealtheMe PHR</projectname>

        <jersey.version>1.1.3-ea</jersey.version>
        <project.encoding>UTF-8</project.encoding>

        <environment-specific-resources>resources-dev</environment-specific-resources><!-- resources-dev, resources-prod -->

        <!-- ide specific config -->
        <netbeans.hint.deploy.server>J2EE</netbeans.hint.deploy.server>

    </properties>

    <build>
        <finalName>phr</finalName>

        <resources>
            <resource>
                <!-- This provides an easy way to switch between dev (development) and prod (production) configurations. -->
                <directory>src/main/${environment-specific-resources}</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <!-- There doesn't appear to be a way to filter only selected resources (or to exclude resources from filter) -->
                <!-- So any resources that should be filtered should be moved to this dir -->
                <directory>src/main/filtered-resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                    	<!-- bundle the source into zip for snapshot of code used in .war -->
                        <descriptor>src/main/assembly/src.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- append to the packaging phase. -->
                        <goals>
                            <goal>attached</goal> <!-- goals == mojos -->
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <forkMode>pertest</forkMode>
		    <!-- need more memory than the default for our unit tests -->
                    <argLine>-Xmx1024M -XX:MaxPermSize=128M  -Dlog4j.debug</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>surefire-unittest</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>none</exclude>
                            </excludes>
                            <includes>
                                <include>**/Test*.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.10.b1</version>
                <configuration>
                    <header>${basedir}/src/etc/header.txt</header>
                    <excludes>
                        <!-- git -->
                        <exclude>**/.gitignore</exclude>
                        <exclude>**/.gitignore_global</exclude>
                        <!-- licensing requirements -->
                        <exclude>**/LICENSE.txt</exclude>
                        <exclude>**/NOTICE.txt</exclude>
                        <!-- IDE configs (local) -->
                        <exclude>**/nb-configuration.xml</exclude>
                        <!-- binary files -->
                        <exclude>**/*.swf</exclude>
                        <exclude>**/*.pdf</exclude>
                        <!-- vim -->
                        <exclude>**/*.swp</exclude>
                        <!-- autogenerated files -->
                        <exclude>**/*.dbschema</exclude>
                        <!-- external jQuery -->
                        <exclude>src/main/webapp/static/css/jquery.autocomplete.css</exclude>
                        <exclude>src/main/webapp/static/css/redmond/jquery-ui-1.7.2.custom.css</exclude>
                        <exclude>src/main/webapp/static/js/jquery.autocomplete.min.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.bt.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.cookie.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.countdown.pack.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.DOMWindow.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.form.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery-ui-1.7.2.custom.min.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.pager.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.password.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.strengthindicator.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.validate.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery.js</exclude>
                        <exclude>src/main/webapp/static/js/json2.js</exclude>
                        <exclude>src/main/webapp/static/js/jquery-1.7.1.min.js</exclude>
                        <!-- end external jQuery -->
                        <exclude>src/main/webapp/static/js/date.format.js</exclude>
                        <!-- 3rd party components -->
                        <exclude>src/main/webapp/static/3rdParty/**</exclude>
                    </excludes>
                    <properties>
                    	<year>${project.inceptionYear}</year>
                   		<email>healtheme@krminc.com</email>
                    </properties>
                    <encoding>${project.encoding}</encoding>
                    <mapping>
                        <!-- add support for jspf -->
                        <jspf>DYNASCRIPT_STYLE</jspf>
                        <!-- add support for vbs -->
                        <vbs>APOSTROPHE_STYLE</vbs>
                    </mapping>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <strictCheck>true</strictCheck>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>maven-repository.dev.java.net</id>
            <name>Java.net Maven 1 Repository (legacy)</name>
            <url>http://download.java.net/maven/1</url>
<!--            <layout>legacy</layout>-->
        </repository>
        <repository>
            <url>http://download.java.net/maven/2</url>
            <id>metro</id>
            <layout>default</layout>
            <name>Repository for library[metro]</name>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>mc-release</id>
            <name>Local Maven repository of releases</name>
            <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
        <pluginRepository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </pluginRepository>
        <pluginRepository>
            <id>maven-repository.dev.java.net</id>
            <name>Java.net Maven 1 Repository (legacy)</name>
            <url>http://download.java.net/maven/1</url>
            <!-- <layout>legacy</layout> -->
        </pluginRepository>
    </pluginRepositories>
    <distributionManagement>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>java.net-m2-dist-repository</id>
            <name>java.net-m2-repository</name>
            <url>java-net:/maven2-repository/trunk/www/repository/</url>
        </repository>
    </distributionManagement>
</project>




